Updated list styles

--- a/demo/index.html
+++ b/demo/index.html
@@ -79,13 +79,29 @@
             <button type="submit" class="secondary flat" id="submit-button">Add Customer</button>
         </section>
 
-        <p class="font-weight-bold">Features Include:</p>
+        <p class="font-weight-bold">Basic List:</p>
         <ul>
             <li>Faster Page Loads</li>
             <li>Embedded Styles</li>
             <li>Less Bloat</li>
             <li>Consistent Interface</li>
         </ul>
+
+        <p class="font-weight-bold mt-40">Unordered Styled List:</p>
+        <ul class="styled">
+            <li>Faster Page Loads</li>
+            <li>Embedded Styles</li>
+            <li>Less Bloat</li>
+            <li>Consistent Interface</li>
+        </ul>
+
+        <p class="font-weight-bold mt-40">Ordered Styled List:</p>
+        <ol class="styled">
+            <li>Faster Page Loads</li>
+            <li>Embedded Styles</li>
+            <li>Less Bloat</li>
+            <li>Consistent Interface</li>
+        </ol>
     </div>
 
 </div>
